# lang

./: .dockerignore  .dprint.jsonc  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Dockerfile  Lang.sln  Makefile  Nuget.Config  README.md  buf.gen.yaml  e2e_test.go  go.mod  go.sum  kaleidoscope.cpp  library.h  library_test.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.config/: dotnet-tools.json
.github/: renovate.json
.github/workflows/: ci.yml  tmp.yml
cmd/ir/: main.go
hack/: CMakeUserPresets.example.json  example.envrc
lib/io/unmango/v1alpha1/: ast.grpc.pb.cc  ast.grpc.pb.h  ast.pb.cc  ast.pb.h  parser.grpc.pb.cc  parser.grpc.pb.h  parser.pb.cc  parser.pb.h
lib/llvm/: Makefile
pkg/ast/: ast.go  visitor.go  walk.go
pkg/io/unmango/v1alpha1/: ast.pb.go  ast_grpc.pb.go  parser.pb.go  parser_grpc.pb.go
pkg/io/unmango/v1alpha1/unmangov1alpha1connect/: parser.connect.go
pkg/ir/: codegen.go  emit.go
pkg/kaleidoscope/ast/: ast.go
pkg/kaleidoscope/ir/: codegen.go
pkg/kaleidoscope/parser/: parser.go  parser_test.go
pkg/kaleidoscope/scanner/: scanner.go
pkg/kaleidoscope/token/: token.go
pkg/parser/: parser.go  parser_test.go
pkg/scanner/: scanner.go  scanner_test.go
pkg/token/: position.go  token.go
proto/io/unmango/v1alpha1/: ast.proto  parser.proto
src/UnMango.Lang/: Ast.fs  IR.fs  Kaleidoscope.fs  Library.fs  Parser.fs  Printer.fs  UnMango.Lang.fsproj
src/UnMango.Lang.Host/: Program.cs  UnMango.Lang.Host.csproj
src/UnMango.Lang.Host/Properties/: launchSettings.json
src/UnMango.Lang.Host/Services/: ParserService.cs
src/UnMango.Lang.LLVM/: IR.fs  Program.fs  UnMango.Lang.LLVM.fsproj
src/UnMango.Lang.Tests/: Kaleidoscope.fs  Parser.fs  Printer.fs  UnMango.Lang.Tests.fsproj  Util.fs
